# nscs-caf-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  azure-pipelines.yml  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create-command.sh
.github/workflows/: main.yml
