[tool.poetry]
name = "ncsc-caf-scraper"
version = "0.1.0"
description = ""
authors = ["Daintta Ltd", "Emile Boutany <emile.boutany@daintta.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
types-beautifulsoup4 = "^4.12.0.20240907"
httpx = "^0.27.2"
selenium = "^4.25.0"
pydantic = "^2.9.2"
loguru = "^0.7.2"
jsbeautifier = "^1.15.1"
pandas = {extras = ["html", "output-formatting"], version = "^2.2.3"}
pandas-stubs = "^2.2.3.241009"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-check = "^2.4.1"
mypy = "^1.11.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-ra -q -v --cov=. --cov-report html"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["B", "C" ,"E" ,"F" ,"W"]
extend-select = ["I"]
ignore = ["B008", "E203", "E266", "E501"]