[project]
name = "ncsc-caf-scraper"
version = "0.1.0"
description = ""
authors = ["Daintta Ltd", "Emile Boutany <emile.boutany@daintta.com>"]
readme = "README.md"
package-mode = false

requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "scrapling[fetchers]>=0.4.6",
]

[tool.pytest.ini_options]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-ra -q -v --cov=. --cov-report html"

[tool.ruff]
exclude = [
    "__pycache__",
]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["I"]
ignore = ["B008", "E203", "E266", "E501", "PD901", "D", "RET504"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-check>=2.8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "types-beautifulsoup4>=4.12.0.20250516",
    "uv-bump>=0.5.0",
]
